# resource-demo

./: .gitmodules  README.md  guest.wasm
guest-c/: .gitignore  Makefile  generate.sh  main.c  my_world.c  my_world.h
guest-cpp/: .gitignore  Makefile  exports-test-example-my_interface-MyObject.h  generate.sh  main.cpp  my_world.cpp  my_world_cpp.h  wit-guest.h
guest-jco/: generate.sh  main.js
guest-rust/: Cargo.toml  build.rs
guest-rust/src/: main.rs
host-jco/: .gitignore  generate.sh  guest-rust.wasm  wasi_snapshot_preview1.wasm
host-jco/html/: .gitignore  component.core.wasm  component.core2.wasm  component.js  index.html  main.js
host-jco/html/bytecodealliance/preview2-shim/: README.md  cli.js  filesystem.js  io.js
host-jco/html/test_example/: my-interface.js
host-wamr/: .gitignore  CMakeLists.txt  executor.cpp  generate.sh  implementation.cpp  implementations.cpp  my_world_cpp_host.h  my_world_host.cpp  test-example-my_interface-MyObject.h  wit-common.h  wit-host.h
host-wasmtime/: Cargo.toml  generate.sh
host-wasmtime/src/: main.rs
minimal-wasmtime/: Cargo.toml  README.md
minimal-wasmtime/compile/: Cargo.toml
minimal-wasmtime/compile/src/: main.rs
minimal-wasmtime/src/: main.rs
wit/: simple.wit
