[package]
name = "host-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
wasmtime = { version = "29.0.1", features = ["component-model"] }
wasmtime-wasi = "29.0.1"
wit-component = "0.225.0"
